# graoulib-app

./: README.md  pyproject.toml
.github/workflows/: collect-data.yml  deploy-pages.yml
data/: latest_snapshot.json
data/history/: 2026-04-23.ndjson  2026-04-24.ndjson  2026-04-25.ndjson  2026-04-26.ndjson  2026-04-27.ndjson  2026-04-28.ndjson  2026-04-29.ndjson  2026-04-30.ndjson  2026-05-01.ndjson  2026-05-02.ndjson  2026-05-03.ndjson  2026-05-04.ndjson  2026-05-05.ndjson  2026-05-06.ndjson  2026-05-07.ndjson  2026-05-08.ndjson  2026-05-09.ndjson  2026-05-10.ndjson  2026-05-11.ndjson  2026-05-12.ndjson  2026-05-13.ndjson  2026-05-14.ndjson  2026-05-15.ndjson  2026-05-16.ndjson  2026-05-17.ndjson  2026-05-18.ndjson  2026-05-19.ndjson  2026-05-20.ndjson  2026-05-21.ndjson  2026-05-22.ndjson  2026-05-23.ndjson  2026-05-24.ndjson  2026-05-25.ndjson  2026-05-26.ndjson  2026-05-27.ndjson  2026-05-28.ndjson  2026-05-29.ndjson  2026-05-30.ndjson  2026-05-31.ndjson  2026-06-01.ndjson  (+53 more)
docs/: app.js  index.html  styles.css
docs/data/: all_series.json  latest_snapshot.json  today_series.json
macos/: com.graoulib.collector.plist
scripts/: build_site_data.py  collect_snapshot.py  run_collect_loop.py
src/graoulib/: __init__.py  config.py  fetcher.py  pipeline.py  storage.py
src/graoulib_app.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
tests/: test_fetcher.py  test_pipeline.py  test_storage.py
